Overflow bug fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@
 
 body{
   overflow: hidden;
+  overflow-y: auto;
 }
 
 @font-face{
